force-app/main/default/objects/Project__c/fields/EndDate_d__c.field-meta.xml
<CustomField>
    <fullName>EndDate_d__c</fullName>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>