force-app/main/default/objects/Project__c/fields/Name_t__c.field-meta.xml
<CustomField>
    <fullName>Name_t__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>