force-app/main/default/objects/Project__c/fields/TechStack_mp__c.field-meta.xml
<CustomField>
    <fullName>TechStack_mp__c</fullName>
    <label>Tech Stack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Node.js</fullName>
            </value>
            <value>
                <fullName>Express.js</fullName>
            </value>
            <value>
                <fullName>Salesforce Apex</fullName>
            </value>
            <value>
                <fullName>Salesforce LWC</fullName>
            </value>
            <value>
                <fullName>Salesforce REST API</fullName>
            </value>
            <value>
                <fullName>JavaScript (ES6+)</fullName>
            </value>
            <value>
                <fullName>HTML5</fullName>
            </value>
            <value>
                <fullName>CSS3</fullName>
            </value>
            <value>
                <fullName>MongoDB</fullName>
            </value>
            <value>
                <fullName>PostgreSQL</fullName>
            </value>
            <value>
                <fullName>Git &amp; GitHub</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Render.com</fullName>
            </value>
            <value>
                <fullName>OAuth 2.0</fullName>
            </value>
            <value>
                <fullName>Mocha &amp; Chai</fullName>
            </value>
            <value>
                <fullName>Webpack</fullName>
            </value>
            <value>
                <fullName>Jenkins (CI/CD)</fullName>
            </value>
            <value>
                <fullName>Docker</fullName>
            </value>
            <value>
                <fullName>Salesforce CLI</fullName>
            </value>
            <value>
                <fullName>Visual Studio Code</fullName>
            </value>
            <value>
                <fullName>Salesforce Flows</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Email Alerts</fullName>
            </value>
            <value>
                <fullName>Objects &amp; Fields</fullName>
            </value>
            <value>
                <fullName>Validation Rules</fullName>
            </value>
            <value>
                <fullName>Formula Fields</fullName>
            </value>
            <value>
                <fullName>Managed Packages</fullName>
            </value>
            <value>
                <fullName>Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>SBQQ CPQ</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>