force-app/main/default/objects/Project__c/fields/URL_url__c.field-meta.xml
<CustomField>
    <fullName>URL_url__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>