force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_t__c</columns>
    <columns>StartDate_d__c</columns>
    <columns>EndDate_d__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>